[package]
name = "ic_event_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde = "1.0.136"
candid = "0.7.4" # this is required if you want to use the `#[import]` macro
log = "0.4.17"
bincode = "1.3.3"
byteorder = "1.4.3"